# private-billings

./: .gitignore  Dockerfile  README.md  client.py  common.py  launch.py  market_operator.py  pyproject.toml  requirements.txt  server.py  trigger.py
docker/: Dockerfile  README.md  docker-compose.yml  launch.py  trigger.py
docs/: billing_model.md  docs.md  protocol.md  universal_cost_split.md  using_the_library.md
private_billing/: __init__.py  bill.py  billing.py  ckks_utils.py  client.py  cycle.py  data.py  hidden_bill.py  hidden_data.py  hiding.py  market.py  masking.py  messages.py  operator.py  serialize.py  server.py  utils.py
private_billing/core/: bill.py  billing.py  cycle.py  data.py  hidden_bill.py  hidden_data.py  hiding.py  masking.py
private_billing/server/: market_config.py
src/: launch.py
src/private_billing/: __init__.py  billing.py  core_server.py  edge_server.py  log.py  market.py  messages.py  network.py  peer.py
src/private_billing/core/: __init__.py  bill.py  billing.py  cycle.py  (+7 more)
tests/: test_bill.py  test_billing.py  test_billing_server.py  test_converter.py  test_core_server.py  test_data.py  test_edge_server.py  test_integration.py  test_market_operator.py  test_masking.py  test_peer.py  test_serialization.py  test_utils.py  tools.py
tests/core/: test_billing.py  test_converter.py  test_data.py  test_hidden_bill.py  test_hidden_data.py  test_integration.py  test_masking.py  test_serialization.py  tools.py
tests/server/: test_encoding.py  test_message_sender.py  test_notification_server.py  test_request_reply.py  test_signing.py
(+7 files in other folders)
